// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test entreprise search correct siren 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "activitePrincipaleUniteLegale": "70.22Z",
  "caractereEmployeurUniteLegale": "O",
  "categorieJuridiqueUniteLegale": "5308",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "dateCreationUniteLegale": "1955-01-01",
  "etablissements": 133,
  "etatAdministratifUniteLegale": "A",
  "firstMatchingEtablissement": Object {
    "activitePrincipaleEtablissement": "22.11Z",
    "address": "PLACE DES CARMES DECHAUX 63000 CLERMONT-FERRAND",
    "categorieEntreprise": "GE",
    "codeCommuneEtablissement": "63113",
    "codePostalEtablissement": "63000",
    "etablissementSiege": true,
    "etatAdministratifEtablissement": "A",
    "idccs": Array [
      "0045",
      "9999",
      "1486",
    ],
    "libelleCommuneEtablissement": "CLERMONT-FERRAND",
    "siret": "85520050700017",
  },
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 133,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Traitement de données, hébergement et activités connexes",
  "activitePrincipaleEtablissement": "63.11Z",
  "activitePrincipaleUniteLegale": "70.22Z",
  "address": "107 RUE SERVIENT 69003 LYON",
  "caractereEmployeurUniteLegale": "O",
  "categorieEntreprise": "GE",
  "categorieJuridiqueUniteLegale": "5308",
  "codeCommuneEtablissement": "69383",
  "codePostalEtablissement": "69003",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
  ],
  "dateCreationUniteLegale": "1955-01-01",
  "etablissementSiege": false,
  "etablissements": 133,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "idccs": Array [
    "0045",
  ],
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "libelleCommuneEtablissement": "LYON 3EME",
  "matching": 1,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
  "siret": "85520050703169",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "activitePrincipaleUniteLegale": "70.22Z",
  "allMatchingEtablissements": Array [
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "7 AVENUE DU PRÉSIDENT RENÉ COTY 10600 LA CHAPELLE-SAINT-LUC",
      "codeCommuneEtablissement": "10081",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050701171",
    },
    Object {
      "activitePrincipaleEtablissement": "71.20B",
      "address": "ROUTE D’ARLES 13300 SALON-DE-PROVENCE",
      "codeCommuneEtablissement": "13103",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050703094",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "PLACE ALEXANDRE DIEU 18230 SAINT-DOULCHARD",
      "codeCommuneEtablissement": "18205",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050701106",
    },
    Object {
      "activitePrincipaleEtablissement": "45.31Z",
      "address": "ZAC DE L’ARNAHURT 33650 LA BRÈDE",
      "codeCommuneEtablissement": "33213",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050702823",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "1 RUE GUTENBERG 37300 JOUÉ-LÈS-TOURS",
      "codeCommuneEtablissement": "37122",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700850",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "RUE DE CHARLIEU 42300 ROANNE",
      "codeCommuneEtablissement": "42187",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050701445",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "ZI BLAVOZY-ST GERM LAPRADE 43700 BLAVOZY",
      "codeCommuneEtablissement": "43032",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050701866",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "16 RUE DE TOUTLEMONDE 49300 CHOLET",
      "codeCommuneEtablissement": "49099",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700710",
    },
    Object {
      "activitePrincipaleEtablissement": "25.93Z",
      "address": "AVENUE EDOUARD MICHELIN 56000 VANNES",
      "codeCommuneEtablissement": "56260",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700637",
    },
    Object {
      "activitePrincipaleEtablissement": "52.10B",
      "address": "ZA PLATEAU D’HERIN 59220 ROUVIGNIES",
      "codeCommuneEtablissement": "59515",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050703086",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "PLACE DES CARMES DECHAUX 63000 CLERMONT-FERRAND",
      "codeCommuneEtablissement": "63113",
      "codePostalEtablissement": "10600",
      "etablissementSiege": true,
      "idccs": Array [
        "0045",
        "1486",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700017",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "ZI DE FELET 63300 THIERS",
      "codeCommuneEtablissement": "63430",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050702278",
    },
    Object {
      "activitePrincipaleEtablissement": "63.11Z",
      "address": "107 RUE SERVIENT 69003 LYON",
      "codeCommuneEtablissement": "69383",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050703169",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "USINE MICHELIN DE BLANZY LA FIOLLE (ZONE INDUSTRIELLE) BLANZY",
      "codeCommuneEtablissement": "71040",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700306",
    },
    Object {
      "activitePrincipaleEtablissement": "22.11Z",
      "address": "ROUTE DE NANTES 85000 LA ROCHE-SUR-YON",
      "codeCommuneEtablissement": "85191",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050701379",
    },
    Object {
      "activitePrincipaleEtablissement": "52.10B",
      "address": "21 RUE MARCELLIN BERTHELOT 86000 POITIERS",
      "codeCommuneEtablissement": "86194",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700132",
    },
    Object {
      "activitePrincipaleEtablissement": "25.93Z",
      "address": "RUE DU XAY 88190 GOLBEY",
      "codeCommuneEtablissement": "88209",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050700108",
    },
    Object {
      "activitePrincipaleEtablissement": "58.11Z",
      "address": "27 COURS DE L’ILE SEGUIN 92100 BOULOGNE-BILLANCOURT",
      "codeCommuneEtablissement": "92012",
      "codePostalEtablissement": "10600",
      "etablissementSiege": false,
      "idccs": Array [
        "0045",
        "1486",
        "9999",
      ],
      "libelleCommuneEtablissement": "LA CHAPELLE-SAINT-LUC",
      "siret": "85520050703144",
    },
  ],
  "caractereEmployeurUniteLegale": "O",
  "categorieJuridiqueUniteLegale": "5308",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "dateCreationUniteLegale": "1955-01-01",
  "etablissements": 133,
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</u></b>",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 18,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;
